# rust_learning_system

./: .gitignore  Dockerfile  docker-compose.yml
data/: data.db
server/: Cargo.toml
server/migrations/: 0002_seed_q01.sql
server/src/: main.rs
ui/: index.html  script.js  style.css
