[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }
anyhow = "1"
env_logger = "0.11"

# ▼ 追加（DB関連）
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }